langtools/test/tools/javac/lambda/TargetType10.out
TargetType10.java:17:18: compiler.err.prob.found.req: (compiler.misc.cyclic.inference: B,A)
1 error
